<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="320dp">

            <Button
                android:id="@+id/button_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/simonetta"
                android:padding="16dp"
                android:text="@string/about_alc"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="@+id/text_welcome"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@+id/text_welcome"
                app:layout_constraintTop_toBottomOf="@+id/text_welcome"
                tools:text="ABOUT ALC" />

            <Button
                android:id="@+id/button_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/simonetta"
                android:padding="16dp"
                android:text="@string/my_profile"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/button_about"
                app:layout_constraintStart_toStartOf="@+id/button_about"
                app:layout_constraintTop_toBottomOf="@+id/button_about"
                tools:text="MY PROFILE" />

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/simonetta"
                android:text="@string/text_welcome"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>